--- a/index.html
+++ b/index.html
@@ -219,7 +219,13 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path class="waveTopFooter" fill-opacity="1"
+                d="M0,224L48,208C96,192,192,160,288,144C384,128,480,128,576,160C672,192,768,256,864,250.7C960,245,1056,171,1152,122.7C1248,75,1344,53,1392,42.7L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+            </path>
+        </svg>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-5"></div>
