--- a/index.html
+++ b/index.html
@@ -75,33 +75,33 @@
                             <img class="w-100 header-picture" src="./assets/images/tato-picture.png" alt="">
                         </div>
                     </div>
-                    <p class="txtPresentation-picture">
-                        Música e programação são minha paixão. Saiba mais
-                        <a href="#about-content" class="about-link">
-                            <span>sobre mim
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right"
-                                    viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd"
-                                        d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                                </svg>
-                            </span>
-                        </a>
-                    </p>
+                    <div class="row h-100">
+                        <p class="txtPresentation-picture">
+                            Música e programação são minha paixão. Saiba mais
+                            <a href="#about-content" class="about-link">
+                                <span>sobre mim
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right"
+                                        viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                                    </svg>
+                                </span>
+                            </a>
+                        </p>
+                    </div>
                 </div>
             </div>
 
         </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
-            <path class="waveBottomHeader" fill-opacity="1"
-                d="M0,160L48,165.3C96,171,192,181,288,170.7C384,160,480,128,576,112C672,96,768,96,864,117.3C960,139,1056,181,1152,186.7C1248,192,1344,160,1392,144L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-            </path>
-        </svg>
-
     </header>
 
     <!-- Projects -->
     <section id="projects" class="projects">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path class="waveTopProjects"  fill-opacity="1"
+                d="M0,96L48,106.7C96,117,192,139,288,160C384,181,480,203,576,181.3C672,160,768,96,864,85.3C960,75,1056,117,1152,144C1248,171,1344,181,1392,186.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+            </path>
+        </svg>
         <div class="container-fluid">
             <!-- Projects Title  -->
             <div class="row justify-content-center">
